EXTL-8107 - Update to account management logic
can link management account, and create and delete backup account

Single sign-on added from customer and server

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Homepage: http://www.flexiant.com/
 
 Package: extility-acronis-plugin
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}
 Description: Extility Acronis Plugin
  This package provides the Acronis plugins for FCO
